--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -10,5 +10,15 @@
   <script>require('initialize');</script>
 </head>
 <body>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-40693449-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
